--- a/Dissertationsvorlage Medma.tex
+++ b/Dissertationsvorlage Medma.tex
@@ -13,7 +13,7 @@
 \usepackage{bibgerm} %Paket für deutsche Literaturverzeichnisse
 \usepackage{cite} %Sortierung und Kompression von Ziations-Nummern
 \usepackage{float} %Basispaket für Floats
-\usepackage{array} %verbesserte array und tabular-Umgebung ftp://ftp.fu-berlin.de/tex/CTAN/macros/latex/required/tools/array.pdf
+\usepackage{array,booktabs} %verbesserte array und tabular-Umgebung ftp://ftp.fu-berlin.de/tex/CTAN/macros/latex/required/tools/array.pdf
 	% eigene Befehle für die Zeilenausrichtung in Tabellen. Siehe http://tex.stackexchange.com/questions/12703/how-to-create-fixed-width-table-columns-with-text-raggedright-centered-raggedlef
 	\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 	\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
@@ -40,7 +40,6 @@
 \usepackage{textcomp} % U.a. für Trademark Zeichen (\textsuperscript{TM} or \texttrademark)
 \usepackage[format=plain,labelfont=bf,font=small]{caption} %angepasste Abbildungs- und Tabellen-Beschriftungen (http://www.ctan.org/pkg/caption)
 \usepackage{textgreek} %Erlaubt Druck von aufrechten griechischen Buchstaben im Text
-\usepackage{array,booktabs} %Für schönere Tabellen Dokumentation für booktabs: http://www.namsu.de/Extra/pakete/Booktabs.html
 \usepackage{multirow} %erlaubt in einer Tabelle das Setzen von Text über mehrere Tabellen-Zeilen
 \usepackage{varwidth}
 \usepackage{amsmath} %Bessere Mathematikbereiche
