Entenhausen-Referenzen entfernt, Präambel aufgeräumt

--- a/Deckblatt.tex
+++ b/Deckblatt.tex
@@ -31,7 +31,7 @@
 	\begin{center}
 	Aus der Klinik für Freude am Textsatz\\
 	der Medizinischen Fakultät Mannheim\\
-	(Direktor: Prof. Dr. med. Dagobert Duck)\\
+	(Direktor: Prof. Dr. med. Direktor)\\
 	
 	\end{center}
 
@@ -59,8 +59,8 @@ Dissertationsvorlage der medizinischen Fakultät Mannheim der Universität Heide
 
 	\begin{center}
 	vorgelegt von\\
-	Donald Duck\\
-	aus Entenhausen\\ 
+	Marina Musterfrau\\
+	aus Mannheim\\ 
 	\bigskip
 	Oktober 2016\\
 	\end{center}
