--- a/Dissertationsvorlage Medma.tex
+++ b/Dissertationsvorlage Medma.tex
@@ -3,7 +3,7 @@
 %     Präambel
 %----------------------------------------------------------------------------
 \documentclass{scrreprt}
-\KOMAoptions{fontsize=12pt,DIV=calc} %Für druckreifen, zweiseitigen-Satzspiegel die Option "twoside" bei diesem Befehl einfügen und die beiden Befehle in Zeile 33+34 auskommentieren
+\KOMAoptions{fontsize=12pt,DIV=calc} %Für druckreifen, zweiseitigen-Satzspiegel die Option "twoside" bei diesem Befehl einfügen und die beiden Befehle in Zeile 22+23 auskommentieren
 \usepackage[utf8]{inputenc} %Zeichenkodierung in UTF8
 \usepackage[T1]{fontenc} %westeuropäischer Codierung der Schriftart
 \usepackage[onehalfspacing]{setspace}
@@ -18,7 +18,7 @@
 	\renewcommand*{\chaptermarkformat}{} %keine Chapternummern in Header
 	\renewcommand*{\sectionmarkformat}{} %keine Sectionnummern in Header
 %=======================
-% die folgenden zwei Befehle auskommentieren, wenn in Zeile 7 die twoside-Option aktiviert wurde
+% die folgenden zwei Befehle auskommentieren, wenn in Zeile 6 die twoside-Option aktiviert wurde
 \ihead{\headmark} %Header soll immer links gesetzt werden (i=innen, da einseitig=nur rechte Seiten bedeutet)
 \chead{} %center Header leer
 % die obigen zwei Befehle auskommentieren, wenn in Zeile 7 die twoside-Option aktiviert wurde
@@ -32,20 +32,20 @@
 	\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 	\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \usepackage{multirow} %erlaubt in einer Tabelle das Setzen von Text über mehrere Tabellen-Zeilen
+\usepackage{graphicx} %Ermöglicht Einbindung von Grafiken
+\usepackage{amsmath} %Bessere Mathematikbereiche
+\usepackage[space]{grffile} %Erlaubt, mit graphix Dateinamen mit Leerzeichen einzubinden
 \usepackage[all]{nowidow} %Vermeidet Hurensöhne und Schusterjungen
 \usepackage{pdfpages} %pdf-Dateien einbinden
 \usepackage{lscape,pdflscape} %Querformat-Darstellung einzelner Seiten
 \usepackage{acronym} % Abkürzungen werden beim ersten mal ausgeschrieben, danach abgekürzt
-\usepackage{graphicx} %Ermöglicht Einbindung von Grafiken
-\usepackage[space]{grffile} %Erlaubt, mit graphix Dateinamen mit Leerzeichen einzubinden
-\usepackage{amsmath} %Bessere Mathematikbereiche
 \usepackage{varwidth} %Erlaubt erstellen von Minipages mit variabler Breite
 \usepackage{textcomp} % U.a. für Trademark Zeichen (\textsuperscript{TM} or \texttrademark)
 \usepackage{textgreek} %Erlaubt Druck von aufrechten griechischen Buchstaben im Text
-
 \usepackage{todonotes} %erlaubt das einfügen von \todo{To-Dos}
 
-%--------Für URL-Breaks in der Bibliographie siehe  https://norwied.wordpress.com/2012/07/10/how-to-break-long-urls-in-bibtex/]
+%--------Für URL-Breaks in der Bibliographie 
+% (siehe https://norwied.wordpress.com/2012/07/10/how-to-break-long-urls-in-bibtex/)
 \usepackage{url} %ermöglicht das einbinden klickbarer URLs
 \def\UrlBreaks{\do\/\do-\do_\do.\do?}
 \usepackage[breaklinks,hidelinks]{hyperref}
@@ -62,7 +62,7 @@
 
 
 %----------------------------------------------------------------------------
-%     Deckblatt
+%     Deckblatt + 2. Seite
 %----------------------------------------------------------------------------
 
 \begin{document}
@@ -77,6 +77,7 @@
 %--------------------------------------------------------------------------------------------------
 %     Beginn des Dokuments
 %--------------------------------------------------------------------------------------------------
+
 %--------------------------------------------------------------------------------------------------
 %     Literatur- und Abkürzungsverzeichnis
 %--------------------------------------------------------------------------------------------------
@@ -96,9 +97,9 @@
 	\acro{MedMa}{Medizin Mannheim}
 \end{acronym}
 
-%----------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
 %     Einleitung
-%----------------------------------------------------------------------------
+%--------------------------------------------------------------------------------------------------
 \chapter{Einleitung}
 \section{Diese Vorlage}
 Dies Vorlage für eine Dissertation an der Medzinischen Fakultät Mannheim der Universität wurde von Yannic Meyer auf der Basis der Vorarbeit von Patrick Järgen und Julian Gehweiler erstellt und Form und Aufbau sollen noch von der Promotionskommission abgesegnet werden. 
@@ -106,7 +107,7 @@ Dies Vorlage für eine Dissertation an der Medzinischen Fakultät Mannheim der U
 Für die Abfassung der Dissertation beachten Sie bitte die entsprechenden Hinweise und Richtinien der Fakultät. In den folgenden Abschnitten finden Sie einige knappe Hinweise zu LaTeX selbst und zur Verwendung dieser Vorlage. 
 
 \paragraph{Einseitiges und Zweiseitiges Layout}
-Standardmäßig ist diese Vorlage so eingestellt, dass der Satzspiegel auf der Seite horizontal zentriert wird, da dies für die Betrachtung des generierten PDFs am PC deutlich angenehmer ist. Für einen zweiseitigen Satz, bei dem der Satzspiegel an der Innenfalz einen engeren Abstand hat als beispielsweise zum Rand nach außen kann in der Präambel in Zeile 6 die Option \verb|twoside| eingefügt und Zeile 33 und 34 mit \verb|%| auskommentiert werden. 
+Standardmäßig ist diese Vorlage so eingestellt, dass der Satzspiegel auf der Seite horizontal zentriert wird, da dies für die Betrachtung des generierten PDFs am PC deutlich angenehmer ist. Für einen zweiseitigen Satz, bei dem der Satzspiegel an der Innenfalz einen engeren Abstand hat als beispielsweise zum Rand nach außen kann in der Präambel in Zeile 6 die Option \verb|twoside| eingefügt und Zeile 22 und 23 mit \verb|%| auskommentiert werden. 
 
 \paragraph{Das Deckblatt} wird in diesem Template mittels der Datei \verb|Deckblatt.tex| separat generiert und das PDF dann hier eingebunden. 
 
@@ -267,7 +268,7 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 
 	1980 - 1990: 	& Gymnasium Mannheim\\[0,5em]
 
-	Abitur: 			& 09.06.1952 \\[0,5em]
+	Abitur: 			& 09.06.1990 \\[0,5em]
 	&\\[0,5em]
 		\multicolumn{2}{l}{{\Large \scshape{Universitärer Werdegang}}} \\[0,6em]
 	WS2010/2011			& Beginn des Studiums der Humanmedizin an der \\
