--- a/Dissertationsvorlage Medma.tex
+++ b/Dissertationsvorlage Medma.tex
@@ -65,6 +65,8 @@
 %     Deckblatt + 2. Seite
 %----------------------------------------------------------------------------
 
+% Info: Das Deckblatt wird in diesem Template mittels der Datei Deckblatt.tex separat generiert und das PDF dann hier eingebunden. 
+
 \begin{document}
 \pagenumbering{gobble}
 \includepdf[pages={1}]{Deckblatt.pdf} %damit das Deckblatt im oneside Modus eingebunden wird
@@ -104,21 +106,19 @@
 \section{Diese Vorlage}
 Dies Vorlage für eine Dissertation an der Medzinischen Fakultät Mannheim der Universität wurde von Yannic Meyer auf der Basis der Vorarbeit von Patrick Järgen und Julian Gehweiler erstellt und Form und Aufbau sollen noch von der Promotionskommission abgesegnet werden. 
 
-Für die Abfassung der Dissertation beachten Sie bitte die entsprechenden Hinweise und Richtinien der Fakultät. In den folgenden Abschnitten finden Sie einige knappe Hinweise zu LaTeX selbst und zur Verwendung dieser Vorlage. 
+Für die Abfassung der Dissertation sind die entsprechenden Hinweise und Richtlinien der Fakultät zu beachten. In den folgenden Abschnitten finden Sie einige knappe Hinweise zu LaTeX selbst und zur Verwendung dieser Vorlage. 
 
 \paragraph{Einseitiges und Zweiseitiges Layout}
 Standardmäßig ist diese Vorlage so eingestellt, dass der Satzspiegel auf der Seite horizontal zentriert wird, da dies für die Betrachtung des generierten PDFs am PC deutlich angenehmer ist. Für einen zweiseitigen Satz, bei dem der Satzspiegel an der Innenfalz einen engeren Abstand hat als beispielsweise zum Rand nach außen kann in der Präambel in Zeile 6 die Option \verb|twoside| eingefügt und Zeile 22 und 23 mit \verb|%| auskommentiert werden. 
 
-\paragraph{Das Deckblatt} wird in diesem Template mittels der Datei \verb|Deckblatt.tex| separat generiert und das PDF dann hier eingebunden. 
-
 \section{Hinweise zu \LaTeX}
-\par{\LaTeX} ist eine Textsatzsprache, die sehr schönen Textsatz ermöglicht, sich sehr gut für die Erstellung von Formeln eignet und die Anfertigung von Verzeichnissen (Inhalt, Abbildungen, Tabellen etc.) und Verweisen auf sehr einfach ermöglicht. Tabellenerstellung oder die Veränderung des verwendeten Templates ist sind dafür aufwändiger als z.B. in Word. 
+\par{\LaTeX} ist eine Textsatzsprache, die schönen Textsatz ermöglicht, sich sehr gut für die Erstellung von Formeln eignet und die Anfertigung von Verzeichnissen (Inhalt, Abbildungen, Tabellen etc.) und Verweisen vereinfacht. Tabellenerstellung oder die Veränderung des verwendeten Templates ist sind dafür aufwändiger als z.B. in MS Word. 
 
-In dieser Dissertationsvorlage der \textit{Medizinischen Fakultät Mannheim} finden Sie in den folgenden Abschnitten einige Beispiele zu Verwendung des Templates. Als Einstieg in LaTeX  ist  \textit{LaTeX - Eine Einführung und ein bisschen mehr} \cite{LaTeX_Guide_1} der \textit{Fernuni Hagen} geeignet, um die zu Grunde liegenden Prinzipien zu erlernen. Es steht auch ein erweiterter Guide (\textit{LaTeX - Fortgeschrittene Anwendungen oder neues von den Hobbits}) \cite{LaTeX_Guide_2} zur Verfügung. Für nahezu alle weiteren Probleme hilft eine kurze Recherche bei einer Suchmaschine der Wahl weiter - meist wird man auf \url{https://tex.stackexchange.com} fündig. 
+In dieser Dissertationsvorlage der \textit{Medizinischen Fakultät Mannheim} finden Sie in den folgenden Abschnitten einige Beispiele zu Verwendung des Templates. Als Einstieg in LaTeX  ist  \textit{LaTeX - Eine Einführung und ein bisschen mehr} der \textit{Fernuni Hagen} geeignet, um die zu Grunde liegenden Prinzipien zu erlernen \cite{LaTeX_Guide_1}. Es steht auch ein erweiterter Guide (\textit{LaTeX - Fortgeschrittene Anwendungen oder neues von den Hobbits}) zur Verfügung \cite{LaTeX_Guide_2}. Für nahezu alle weiteren Probleme hilft in der Regel eine kurze Recherche bei einer Suchmaschine der Wahl weiter - meist wird man auf \url{https://tex.stackexchange.com} fündig. 
 
 \section{Abbildungen und Tabellen}
 
-Abbildungen und Tabellen können als sog. \textit{floats} gesetzt werden und tauchen daher nicht wie man es evtl. aus Word kennt \textit{zwingend} an der Stelle im Text, wo sie definiert sind, sondern LaTeX versucht, sie nach einem gewissen Regelwerk unterzubringen. Die Definition \verb|htpb| gibt an, dass der \textit{float} \verb|here|, auf der oberen (\verb|top|) oder unteren (\verb|bottom|) Hälfte einer Seite oder auf einer eigenen Seite (\verb|page|) gesetzt wird. Mit der Option \verb|H| kann die Positionierung an Ort und Stelle erzwungen werden. Die Optimierung der Abbildungsplatzierung sollte möglichst erst gegen Ende der Fertigstellung der Dissertation erfolgen, um erneute Verschiebungen durch Textveränderungen zu vermeiden. 
+Abbildungen und Tabellen können als sog. \textit{floats} gesetzt werden und tauchen daher nicht, wie man es evtl. aus Word kennt, \textit{zwingend} an der Stelle im Text, wo sie definiert sind, sondern LaTeX versucht, sie nach einem gewissen Regelwerk optimal unterzubringen. Die Definition \verb|htpb| gibt an, dass der \textit{float} \verb|here|, auf der oberen (\verb|top|) oder unteren (\verb|bottom|) Hälfte einer Seite oder auf einer eigenen Seite (\verb|page|) gesetzt wird. Mit der Option \verb|H| kann die Positionierung an Ort und Stelle erzwungen werden. Die Optimierung der Abbildungsplatzierung sollte möglichst erst gegen Ende der Fertigstellung der Dissertation erfolgen, um erneute Verschiebungen durch Textveränderungen zu vermeiden. 
 
 Eine Anleitung zur Erstellung übersichtlicher und visuell ansprechender Tabellen findet sich in der Dokumentation des Paketes \verb|booktabs| auf \url{http://ftp.math.purdue.edu/mirrors/ctan.org/macros/latex/contrib/booktabs-de/booktabs-de.pdf}. Zur Erstellung von Abbildungen gibt es von Rougier et al. ein paar hilfreiche Hinweise auf \url{http://dx.plos.org/10.1371/journal.pcbi.1003833} \cite{Rougier2014}. 
 \vspace*{0.6cm}
@@ -128,7 +128,7 @@ Eine Anleitung zur Erstellung übersichtlicher und visuell ansprechender Tabelle
 		\includegraphics[height=6cm]{abbildungen/Starling_Mechpower.jpg} 
 		\caption[Mechanische Leistung eines Staren im Windtunnel]{
 			\textbf{Mechanische Leistung eines Staren im Windtunnel.} 
-			Flug-Muskel-Effizienz von zwei Staren während eines Windtunnel-Fluges. Pmech gibt die mechanische Leistung an ($\bullet$ Vogel 15, Pmech anhand des Vortex-Ring-Modells geschätzt; $\circ$ Vogel 15, Pmech anhand des Linien-Auftriebs Modells geschätzt; $\triangle$ Vogel 19, Pmech anhand des Linien-Auftriebs-Modells geschätzt). Abbildung von Ward et al. übernommen  \cite{Ward2001}.
+			Flug-Muskel-Effizienz von zwei Staren während eines Windtunnel-Fluges. Pmech gibt die mechanische Leistung an ($\bullet$ Vogel 15, Pmech anhand des Vortex-Ring-Modells geschätzt; $\circ$ Vogel 15, Pmech anhand des Linien-Auftriebs Modells geschätzt; $\triangle$ Vogel 19, Pmech anhand des Linien-Auftriebs-Modells geschätzt). (Abbildung von Ward et al. übernommen  \cite{Ward2001}).
 			}
 		\label{fig:beispielabbildung}
 	}
@@ -153,24 +153,23 @@ Eine Anleitung zur Erstellung übersichtlicher und visuell ansprechender Tabelle
 			13,3 & 11,0 & 63,0 & 0,484 & 80,8 & 0,380 \\
 			\bottomrule
 		\end{tabular}
-		\caption[Flügelschlag-Kinematik von Vogel 15]{
+		\caption[Flügelschlag-Kinematik eine Staren]{
 			\textbf{Flügelschlag-Kinematik von Vogel 15.}
-			Die Messungen erfolgten mittels Hochgeschwindigkeits-Videoaufzeichnungen während eines Windtunnelfluges mit Atemmaske. Tabelle von Ward et al. übernommen  \cite{Ward2001}.
+			Die Messungen erfolgten mittels Hochgeschwindigkeits-Videoaufzeichnungen während eines Windtunnelfluges durch Vogel 15 mit Atemmaske. (Tabelle von Ward et al. übernommen  \cite{Ward2001}).
 			}
 		\label{tab:beispieltabelle}
 	\end{center}
 \end{table}
 
 \section{Querverweise und Abkürzungsverzeichnis} \label{sec:verweise}
-Zur Verwendung von \textbf{Querverweisen} kann an jeder Stelle im Text ein \verb|\label{label}| platziert werden, dessen Nummer mit \verb|\ref{label}| und dessen Seitenzahl mit \\ \verb|\pageref{label}| abgerufen werden kann. Befindet sich das Label einfach im Text wird die Nummer des Abschnittes zugewiesen, befindet sich das Label in einer Abbildung oder Tabelle wird die entsprechende Nummer der fortlaufenden Abbildungs- und Tabellen-Nummerierung ausgegeben (So trägt dieser Abschnitt die Nummer \ref{sec:verweise} und befindet sich auf S. \pageref{sec:verweise}). 
+Zur Verwendung von \textbf{Querverweisen} kann an jeder Stelle im Text ein \verb|\label{label}| platziert werden und seine Nummer kann mit \verb|\ref{label}| und seine Seitenzahl mit \\ \verb|\pageref{label}| abgerufen werden. Befindet sich das Label einfach im Text wird die Nummer des Abschnittes zugewiesen, befindet sich das Label in einer Abbildung oder Tabelle wird die entsprechende Nummer der fortlaufenden Abbildungs- und Tabellen-Nummerierung ausgegeben (So trägt dieser Abschnitt die Nummer \ref{sec:verweise} und befindet sich auf S. \pageref{sec:verweise}). 
 
 Ein \textbf{Abkürzungsverzeichnis} kann wie auf S. \pageref{sec:abk_Verz} definiert und auf die Abkürzungen mittels \verb|\ac{Abkürzung}| zugegriffen werden. In der aktuellen Konfiguration wird bei der ersten Nennung die Lang- und Kurzebezeichnung (\ac{BSP}) ausgegeben, bei weiteren dann nur die Kurzbezeichnung (\ac{BSP}). 
 
 
 \section{Bibliographie}
 
-Zur Erstellung einer Bibliographie mit \verb|BibTex| und \verb|BibLaTeX| zwei verschiedene Schnittstellen zur Verfügung. Mit z.B. EndNote kann automatisiert die eine BibTex-Datei für die Literaturliste generiert werden, in der jedem Eintrag der Datenbank ein Zitations-Schlüssel zugewiesen wird (eine Anleitung findet sich z.B. hier: \url{http://libguides.mit.edu/c.php?g=176170&p=1158648#3}). Der Zitations-Schlüssel kann mit \verb|\cite{schlüssel}| abgerufen werden. LaTeX übernimmt dann wie man es z.B. vom Endnote-Plugin für Word kennt, die Nummerierung und Erstellung des Literaturverzeichnisses. 
-Die Referenz-Datei für das Literaturverzeichnis ist hier an der entsprechenden Stelle im Code mit \\ \verb|\bibliography{BibTex/library}| eingebunden, der Befehl  \verb|\bibliographystyle{ieeetr}| generiert dann das Literaturverzeichnis. 
+Zur Erstellung einer Bibliographie mit \verb|BibTex| und \verb|BibLaTeX| zwei verschiedene Schnittstellen zur Verfügung. Mit z.B. EndNote kann automatisiert die eine BibTex-Datei für die Literaturliste generiert werden, in der jedem Eintrag der Datenbank ein Zitations-Schlüssel zugewiesen wird (eine Anleitung findet sich z.B. hier: \url{http://libguides.mit.edu/c.php?g=176170&p=1158648#3}). Der Zitations-Schlüssel kann mit \verb|\cite{schlüssel}| abgerufen werden und LaTeX übernimmt, wie man es z.B. vom Endnote-Plugin für Word kennt, die Nummerierung und Erstellung des Literaturverzeichnisses. Die Referenz-Datei für das Literaturverzeichnis ist hier an der entsprechenden Stelle im Code mit \\ \verb|\bibliography{BibTex/library}| eingebunden, der Befehl  \verb|\bibliographystyle{ieeetr}| generiert dann das Literaturverzeichnis. 
 
 \section{Was noch zu tun ist}
 Mit dem \verb|todonotes|-Paket kann eine To-Do-Liste geführt werden. Die Notizen können einfach mit \verb|\todo{das ist noch zu erledigen!}| eingefügt werden. Weitere Informationen finden sich in der Dokumentation des Paketes: \url{https://www.ctan.org/pkg/todonotes}.
