Kommentar in Präambel eingefügt

--- a/Dissertationsvorlage Medma.tex
+++ b/Dissertationsvorlage Medma.tex
@@ -6,7 +6,7 @@
 \KOMAoptions{fontsize=12pt,DIV=calc} %Für druckreifen, zweiseitigen-Satzspiegel die Option "twoside" bei diesem Befehl einfügen und die beiden Befehle in Zeile 22+23 auskommentieren
 \usepackage[utf8]{inputenc} %Zeichenkodierung in UTF8
 \usepackage[T1]{fontenc} %westeuropäischer Codierung der Schriftart
-\usepackage[onehalfspacing]{setspace}
+\usepackage[onehalfspacing]{setspace} %Stellt den Zeilenabstand ein
 \KOMAoptions{DIV=12} %Einstellung des Satzspiegels
 \usepackage[ngerman]{babel} %Trennungsregeln und autom. Überschriften in n. dt. RS
 \usepackage{lmodern} %Verbesserte Standardschriftart
